package Clases.concret;

public class Factura {
    protected mesa mesa;
    protected Pedido pedido;
}
