package Clases.concret;

public class Mesero
{
    private int idMesero;
    private String nombre;
    private String apellido;
    private String telefono;
    private boolean activo;

    public Mesero()
    {
    }

    public Mesero(int idMesero, String nombre, String apellido, String telefono, boolean activo)
    {
        this.idMesero = idMesero;
        this.nombre = nombre;
        this.apellido = apellido;
        this.telefono = telefono;
        this.activo = activo;
    }

    public int getIdMesero()
    {
        return idMesero;
    }

    public void setIdMesero(int idMesero)
    {
        this.idMesero = idMesero;
    }

    public String getNombre()
    {
        return nombre;
    }

    public void setNombre(String nombre)
    {
        this.nombre = nombre;
    }

    public String getApellido()
    {
        return apellido;
    }

    public void setApellido(String apellido)
    {
        this.apellido = apellido;
    }

    public String getTelefono()
    {
        return telefono;
    }

    public void setTelefono(String telefono)
    {
        this.telefono = telefono;
    }

    public boolean isActivo()
    {
        return activo;
    }

    public void setActivo(boolean activo)
    {
        this.activo = activo;
    }

    @Override
    public String toString()
    {
        return nombre + " " + apellido;
    }
}
