package Interfaces;

public class CartaServiceImpl implements CartaService {

    @Override
    public void mostrarCarta() {
        // Lógica para mostrar la carta
    }

    @Override
    public void agregarItem(String item) {
        // Lógica para agregar un ítem a la carta
    }

    @Override
    public void eliminarItem(String item) {
        // Lógica para eliminar un ítem de la carta
    }

    @Override
    public void actualizarItem(String item, String nuevoItem) {
        // Lógica para actualizar un ítem en la carta
    }
}
