package Interfaces;

public interface CategoriaComida {
    String getNombre();
}
